# lgdxrobot2-chassistuner

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Main.qml  README.md  SerialPort.cpp  SerialPort.h  application.qrc  main.cpp  qtquickcontrols2.conf
DEBIAN/: control
Debian/: control
Docker/: Dockerfile.amd64  Dockerfile.arm64
qml/: Main.qml  global.js
qml/pages/: MagtonometerCalibration.qml  PidTuner.qml  RobotData.qml  RobotTesting.qml  SaveConfiguration.qml  SaveSettings.qml
qml/pages/MagtonometerCalibration/: CalibrationPane.qml  ConfigurationPane.qml  CustomPane.qml
qml/pages/PidTuner/: MotorsMaxSpeed.qml  PidChartPane.qml  PidConfigurationPane.qml  PidTable.qml  PidTestPane.qml  SavePidPane.qml
qml/pages/RobotData/: HardwareTestingPane.qml
qml/pages/RobotTesting/: HardwareTestingPane.qml  RobotDataPane.qml
qml/pages/SaveConfiguration/: SavePane.qml
qml/pages/SaveSettings/: SavePane.qml
qml/pages/components/: HardwareTestingPane.qml  PidConfigurationPane.qml  PidTestPane.qml  RobotDataPane.qml
qml/shared/: LabelHeading.qml  LabelText.qml  TextField.qml
resources/: mac.icns
resources/AppDir/usr/share/applications/: ChassisTuner.desktop
src/: QmlRobotData.cpp  QmlRobotData.h  RobotData.cpp  RobotData.h  SerialPort.cpp  SerialPort.h  lgdxrobot2.h  main.cpp
src/ellipsoid/: common.cpp  eigenOrder.cpp  fit.cpp  fit.h  generate.cpp  generate.h
